# cpp_slp_graph_search

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile.devcontainer  Dockerfile.regtest  README.md  config.regtest.toml  config.toml  graphsearch.service  gs++  gs++-cli.cpp  gs++.cpp  gs++.hpp  setup.sh  txhash.hpp
blockdecoder/: CMakeLists.txt  blockdecoder.cpp
cli/: CMakeLists.txt  gs++-cli.cpp
cmake/: ProtobufGRPCGenerateCpp.cmake
cslp/: CMakeLists.txt  cslp.cpp
cslp/example/: CMakeLists.txt  example.c
cslp/fuzzing/: .gitignore  CMakeLists.txt  README.md  build_bchtx_corpus.sh  build_slpscript_corpus.sh  build_test_cases.sh  decode_all.sh  decode_bitcoinrpc.sh  decode_cslp.sh  decode_nodejs.sh  diff-bitcoinrpc.sh  diff-nodejs.sh  diff-python.sh  differential.cpp  differential_bitcoinrpc.cpp  differential_nodejs.cpp  differential_python.cpp  download_test_cases_txids.py  fuzz-differential.sh  fuzz-instrumented.sh  fuzz.sh  fuzzcrash-bchtx.sh  fuzzcrash-slpscript.sh  fuzzcrash.c  fuzzcrash.sh  fuzzing.c  slp.dict  util.hpp
cslp/fuzzing/nodejs_validation/: package-lock.json  package.json  run_slp_validate.js
cslp/fuzzing/python_validation/: .gitignore  README.md  server.py
cslp/swig/: CMakeLists.txt  cslp.i  swig_python_test.sh
cslp/swig/python/: CMakeLists.txt  setup.py.in
fuzz/: .gitignore  CMakeLists.txt  README.md  build_bchtx_corpus.sh  build_slpscript_corpus.sh  decode_all_slp.sh  decode_cslp.sh  decode_nodejs.sh  diff-bitcoinrpc.sh  diff-nodejs.sh  diff-python.sh  diff-slpindexer.sh  diff-slpparser.sh  differential_bitcoinrpc.cpp  differential_slpindexer.cpp  differential_slpparser.cpp  download_test_cases_txids.py  fuzzcrash-bchtx.sh  fuzzcrash-slpscript.sh  fuzzcrash_bchparse.cpp  fuzzcrash_slpparse.cpp  rpc_config.example.hpp
fuzz/nodejs_validation/: package-lock.json  package.json  report.js
fuzz/slp-parser.js/: package-lock.json  package.json  server.js
include/: config.h.in
include/cslp/: cslp.h
include/gs++/: bch.hpp  bhash.hpp  block.hpp  graph_node.hpp  gs++.hpp  gs_tx.hpp  mdatabase.hpp  output.hpp  pk_script.hpp  rpc.hpp  scriptpubkey.hpp  slp_token.hpp  slp_transaction.hpp  slp_validator.hpp  slpdb.hpp  token_details.hpp  transaction.hpp  txgraph.hpp  txhash.hpp  util.hpp  utxodb.hpp
pb/: graphsearch.proto  graphsearch.yaml  helloworld.proto  utxo.proto
regtest/: docker-compose.yml
regtest/bitcoin-cash-node/: Dockerfile
regtest/gspp/: Dockerfile  docker-entrypoint.sh  regtest.toml
rest/: .env.example  README.md  index.js  package-lock.json  package.json
server/: CMakeLists.txt  gs++.cpp  gs++.hpp
server/proxy/: Makefile  go.mod  go.sum  reverseproxy.go
server/proxy/web/: .gitignore  graphsearch.dot  graphsearch.swagger.json  index.html  swagger.html
slp_script/: CMakeLists.txt  README.md
slp_script/interpreter/: CMakeLists.txt  interpreter.cpp
slp_script/interpreter/tokentype1/: Makefile  tokentype1  tokentype1.cpp  tokentype2  tokentype2.cpp
slpdecoder/: CMakeLists.txt  slpdecoder.cpp
src/: bch.cpp  block.cpp  cslp.cpp  graph_node.hpp  graph_search_service.cpp  graph_search_service.hpp  gs++-cli.cpp  gs++.cpp  gs++.hpp  mdatabase.cpp  mdatabase.hpp  rpc.cpp  sha2.cpp  slp_transaction.cpp  slp_validator.cpp  token_details.hpp  transaction.cpp  txgraph.cpp  txgraph.hpp  txhash.cpp  util.cpp  utxodb.cpp
src/cashaddr/: cashaddr.cpp
test/: 010-TestCase.cpp  10000.txt  CMakeLists.txt  bch_decoding_tx_to_slp_tests.json  compare_results.sh  extract_graph_txids.sh  has_filesystem.cpp  internals_test.cpp  script_tests.json  slp_decoding_tx_tests.json  slpdb_graph_search_query.json  stresstest.sh  test.cpp  topological_sorting.json
test/check_slpdb/: index.js  package-lock.json  package.json
test/regtest/: .mocharc.yml  1-token-type-1.spec.ts  2-test.spec.ts  package-lock.json  package.json  tsconfig.json
txdecoder/: CMakeLists.txt  txdecoder.cpp
